--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@
 .Ruserdata
 
 data/
+
+final.csv
+
+final_fewercols.txt
+
+raw_pooled.csv
+
+semi_final2.csv
+
+semi_final.csv
+
+semi_final3.csv
+
+semi_final3.txt
+
+semi_final4.csv
+
+semi_final4.txt
